--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "atomico": "^1.33.0",
     "browser-sync": "^2.27.5",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.58.1"
+    "rollup": "^2.58.1",
+    "xhtm": "^1.5.3"
   }
 }
